--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     </style>
 </head>
 <body>
+    
+    <h1 style="color: red; position: absolute; top: 0; width: 100%; text-align: center;">Moritz steht auf eingeölte diddys</h1>
     <div class="calculator">
         <input type="text" class="display" id="display" disabled>
         <div class="buttons">
@@ -128,6 +130,8 @@
             previousOperand = '';
             operation = undefined;
         }
+        
     </script>
+   
 </body>
 </html>
